--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .header_sec{
     position:fixed;
     background-color: #ed9aa4;
@@ -279,7 +280,7 @@ margin: 0;
 }
 .icon_txt li{
     font-size: 15px;
-    background:url(../img/check.webp)no-repeat;
+    background:url(check.webp)no-repeat;
     padding-left: 30px;
     line-height: 25px;
     background-position: top 8px left;
